@@ -5,7 +5,7 @@
 ...and wrapper code generator.
 
 *   Created : 2013-08-28
-*   Last modified : 2015-11-14
+*   Last modified : 2015-12-29
 
 
 ## Features ##
@@ -104,6 +104,7 @@ Use GLFW or GLUT for creating windows and OpenGL rendering contexts.
 ## Tested Environment ##
 
 *   Ruby
+    *   ruby 2.3.0p0 (2015-12-25 revision 53290) [x86_64-darwin15]
     *   ruby 2.2.3p173 (2015-08-18 revision 51636) [x86_64-darwin14]
     *   ruby 2.2.2p95 (2015-04-13 revision 50295) [x86_64-linux]
     *   ruby 2.2.2p95 (2015-04-13 revision 50295) [x86_64-darwin14]
@@ -311,6 +312,7 @@ GLFW か GLUT を用意してください。ウィンドウやレンダリング
 ## テストした環境 ##
 
 *   Ruby
+    *   ruby 2.3.0p0 (2015-12-25 revision 53290) [x86_64-darwin15]
     *   ruby 2.2.3p173 (2015-08-18 revision 51636) [x86_64-darwin14]
     *   ruby 2.2.2p95 (2015-04-13 revision 50295) [x86_64-linux]
     *   ruby 2.2.2p95 (2015-04-13 revision 50295) [x86_64-darwin14]
